syntax = "proto3";
package gedit.store;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.search.grpc";
option java_outer_classname = "StoreSearchProto";
option objc_class_prefix = "STSCH";


import "gedit/common.proto";

// The storesearch service definition.
service StoreSearchApi {
    rpc Index (IndexStoreRequest) returns (IndexStoreResponse) {
    }
    
    rpc Delete (DeleteStoreRequest) returns (DeleteStoreResponse) {
    }
    
    rpc Search (SearchStoreRequest) returns (stream SearchStoreResponse) {
    }
}

message IndexStoreRequest {
    string uuid = 1; //store uuid
    string name = 2;
    string logo = 3;
    Location location = 4;
    string type = 6;
    string desc = 7;
    double pointsRate = 8;

    // 参照AMapLocation.java, 一下amapXXX字段与location配合做附近搜索使用
    //    AdCode:510107, AoiName=心族宾馆, BuildingId=, Street=人民南路四段, StreetNum=34号, District=武侯区, CityCode=028, City=成都市, Province=四川省, Country=中国
    string amapAdCode = 20;
    string amapAoiName = 21;
    string amapBuildingId = 22;
    string amapStreet = 23;
    string amapStreetNum = 24;
    string amapDistrict = 25;
    string amapCityCode = 26;
    string amapCity = 27;
    string amapProvince = 28;
    string amapCountry = 29;

}

message IndexStoreResponse {
    Status status = 999;
    string uuid = 1; //store uuid
//    string status = 2;  //refer to elasticsearch e.g. RestStatus.OK
}


message DeleteStoreRequest{
    string uuid = 1; //store uuid
}

message DeleteStoreResponse{
    Status status = 999;
    string uuid = 1; //store uuid
}

message SearchStoreRequest {
    double lat = 1;
    double lon = 2;
    string type = 3;
    string keyword = 4;
    //refer to https://www.elastic.co/guide/en/elasticsearch/client/java-rest/6.1/java-rest-high-search.html
    int32 from = 100;
    int32 size = 101;

}

message SearchStoreResponse {
    Status status = 999;
    string uuid = 1; //store uuid
    string name = 2;
    string logo = 3;
    Location location = 4;
    string type = 6;
    string desc = 7;
    double pointsRate = 8;

    string amapStreet = 23;
    string amapDistrict = 25;
    string amapCity = 27;
    //refer to https://www.elastic.co/guide/en/elasticsearch/client/java-rest/6.1/java-rest-high-search.html
    int32 from = 100;
}